res/tests/ok/001_hello.abc
main :: () {
  age: i32;
  age= 10;
  
  i32a: i32;
  i32a= 10;
  
  _i64: i64 = 100l;
}
