res/tests/bad/constant_definition_out_of_bounds.abc

main :: () {
  v_fail: i16 = 2 << 15;
  
}